--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+title: Context-aware Attentional Pooling (CAP) for Fine-grained Visual Classification
+description: The Thirty-Fifth AAAI Conference on Artificial Intelligence 2021
+github:
+  is_project_page: false
